apps/headlamp/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp-tailscale
  namespace: kube-system
  annotations:
    tailscale.com/funnel: "true"
spec:
  defaultBackend:
    service:
      name: headlamp  # This will be the service name created by Helm chart
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - headlamp
